syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Product) {};
  rpc GetProduct (ProductById) returns (Product) {};
  rpc UpdateProduct (UpdateProductRequest) returns (Product) {};
  rpc DeleteProduct (ProductById) returns (DeleteResponse) {};
  rpc ListProducts (Empty) returns (stream Product) {};
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductById {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message DeleteResponse {
  bool success = 1;
}

message Empty {}
